bat.bool1.parottrouble.ParotTrouble.scala.error
Compilation error:
ParotTrouble:5: error: type mismatch;
 found   : Unit
 required: Boolean
  if (talking==true && hour>20) {
  ^